@@ -52,7 +52,8 @@ static apr_status_t cmd_acme_newreg(md_cmd_ctx *ctx, const md_cmd_t *cmd)
         return usage(cmd, "newreg needs at least one contact email as argument");
     }
 
-    if (APR_SUCCESS == (rv = md_acme_create_acct(ctx->acme, ctx->p, contacts, ctx->tos))) {
+    if (APR_SUCCESS == (rv = md_acme_create_acct(ctx->acme, ctx->p, contacts, 
+                                                 ctx->tos, MD_PKEY_BITS_DEFAULT))) {
         md_acme_save(ctx->acme, ctx->store, ctx->p);
         fprintf(stdout, "registered: %s\n", md_acme_get_acct(ctx->acme, ctx->p));
     }
