@@ -29,6 +29,7 @@ typedef enum {
     MD_CONFIG_RENEW_NORM,
     MD_CONFIG_RENEW_WINDOW,
     MD_CONFIG_TRANSITIVE,
+    MD_CONFIG_PKEY_BITS,
 } md_config_var_t;
 
 typedef struct {
@@ -52,6 +53,7 @@ typedef struct md_srv_conf_t {
     int transitive;                    /* != 0 iff VirtualHost names/aliases are auto-added */
     int drive_mode;                    /* mode of obtaining credentials */
     int must_staple;                   /* certificates should set the OCSP Must Staple extension */
+    unsigned int pkey_bits;            /* number of bits used in private key generation */
     apr_interval_time_t renew_norm;    /* If > 0, use as normalizing value for cert lifetime
                                         * Example: renew_norm=90d renew_win=30d, cert lives
                                         * for 12 days => renewal 4 days before */
